--- a/src/pages/Home/HomePage.css
+++ b/src/pages/Home/HomePage.css
@@ -1,10 +1,10 @@
-
 .sideBar-container{
     /* display: flex;
     justify-content: center;
     align-items: center; */
     width: 100%;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
     background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(../../../public/images/library.png); 
     background-size:cover;
     background-position: center;
